--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,6 +1,9 @@
 site_name: The NeoFanDoc
 site_url: https://khanhpham05.github.io/neofandoc
+theme:
+  name : null
+  custom_dir: 'cinder'
+extra_css:
+  - font_rules.css
 nav:
   - Home : index.md
-theme:
-  name: readthedocs
