--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,8 +1,7 @@
 site_name: The NeoFanDoc
 site_url: https://khanhpham05.github.io/neofandoc
 theme:
-  name : null
-  custom_dir: 'cinder'
+  custom_dir: 'rtd-dropdown'
 extra_css:
   - font_rules.css
 nav:
