--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,10 +7,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  jobs:
+    pre_build:
+      - pip install mkdocs-rtd-dropdown
 
 mkdocs:
   configuration: mkdocs.yaml
-
-python:
-  install:
-    - mkdocs-rtd-dropdown
