--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,6 +1,6 @@
 site_name: The NeoFanDoc
 site_url: https://khanhpham05.github.io/neofandoc
-theme: 'rtd-dropdown'
+theme: rtd-dropdown
 extra_css:
   - font_rules.css
 nav:
