--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,6 +1,8 @@
 site_name: The NeoFanDoc
-site_url: https://khanhpham05.github.io/neofandoc
-theme: readthedocs
+site_url: https://neofandoc.readthedocs.io/en/latest/
+theme:
+  name: null
+  custom_dir: 'rtd_dropdown/'
 extra_css:
   - font_rules.css
 nav:
