Update some files.

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,7 @@ build:
   jobs:
     pre_build:
       - pip install mkdocs-material
+      - pip install mkdocs-rtd-dropdown
 
 mkdocs:
   configuration: mkdocs.yaml
