--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,8 +1,7 @@
 site_name: The NeoFanDoc
 site_url: https://neofandoc.readthedocs.io/en/latest/
 theme:
-  name: null
-  custom_dir: 'rtd_dropdown/'
+  name: rtd-dropdown
 extra_css:
   - font_rules.css
 nav:
