Start the doc writing, finish choosing theme and configurations.

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -8,6 +8,7 @@ nav:
   - Home: index.md
   - Warming up:
       - setup/starter.md
-      - Setup Java: setup/setup.md
+      - Set up Java: setup/setup_java.md
+      - Set up an IDE: setup/setup_idea.md
 markdown_extensions:
   - admonition
