--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -29,7 +29,7 @@ theme:
         icon: material/brightness-4
         name: Switch to system preference
 extra_css:
-  - font_rules.css
+  - extra_css.css
 repo_url: https://github.com/KhanhPham05/NeoFanDoc
 repo_name: KhanhPham05 / NeoFanDoc
 edit_uri: edit/master/docs/
@@ -52,3 +52,5 @@ nav:
       - Set up JDK: a_setup/b_setup_java.md
       - Set up an IDE: a_setup/c_setup_idea.md
       - Set up mod files: a_setup/d_setup_mdk.md
+  - Project configuring:
+      - Configuring with Gradle:
