--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -52,5 +52,7 @@ nav:
       - Set up JDK: a_setup/b_setup_java.md
       - Set up an IDE: a_setup/c_setup_idea.md
       - Set up mod files: a_setup/d_setup_mdk.md
-  - Project configuring:
-      - Configuring with Gradle: b_configure_project/a_config_gradle.md
+  - Extras:
+      - Project Configuring:
+        - Configuring with Gradle: extra/config_gradle.md
+        - Mapping: extra/mapping.md
