--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -46,16 +46,4 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.superfences
 nav:
-  - Home: index.md
-  - Warming up:
-      - Set up the development environment: a_setup/a_starter.md
-      - Set up JDK: a_setup/b_setup_java.md
-      - Set up an IDE: a_setup/c_setup_idea.md
-      - Set up mod files: a_setup/d_setup_mdk.md
-  - The Basics :
-      - Registration:
-          - Overview: the_basics/registration/overview.md
-  - Extras:
-      - Project Configuring:
-        - Configuring with Gradle: extra/config_gradle.md
-        - Mapping: extra/mapping.md
+  - Obsoleted: index.md
